# snapfire

./: .gitignore  Cargo.toml  README.md
examples/basic_site/: Cargo.toml
examples/basic_site/src/: main.rs
examples/basic_site/static/: style.css
examples/basic_site/templates/: base.html  index.html  user.html
rs/: API_REFERENCE.md  Cargo.toml  README.md
rs/src/: error.rs  lib.rs
rs/src/actix/: mod.rs
rs/src/actix/dev/: injected.js  middleware.rs  mod.rs
rs/src/core/: app.rs  mod.rs  reload.rs
rs/tests/: actix.rs  tera.rs
src/: error.rs  lib.rs
src/actix/: mod.rs
src/actix/dev/: injected.js  middleware.rs  mod.rs  ws.rs
src/core/: app.rs  mod.rs  reload.rs
tests/: actix.rs  common.rs  tera.rs
