[package]
name = "snapfire"
version = "0.0.0"
description = "Ergonomic Tera templating and live reload for the Web. Supports Actix."
edition = "2024"

authors = ["Norm O <normo.pub@gmail.com>"]
license = "MPL-2.0"

[dependencies]
# Core dependencies
actix = "^0.13"
actix-web = "^4"
anyhow = "^1"
async-trait = "^0.1"
log = "^0.4"
parking_lot = "^0.12"
serde = { version = "^1", features = ["derive"] }
tera = "^1"
thiserror = "^2.0"
tokio = { version = "^1", features = ["sync", "rt", "rt-multi-thread"] }

# Dev-reload specific dependencies (optional)
async-stream = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }
notify = { version = "^6.0", optional = true }
futures-util = { version = "^0.3", optional = true }
actix-ws = { version = "^0.3", optional = true }

[dev-dependencies]
actix-rt = "^2"
actix-http = "^3.1"
tempfile = "^3.21"
tokio = { version = "^1", features = ["rt", "macros"] }
tokio-tungstenite = "^0.27"
url = "^2.5"

[features]
# The default experience includes live-reloading for development.
# To build for production, use `--no-default-features`.
default = ["dev-reload"]
dev-reload = ["dep:notify", "dep:futures-util", "dep:actix-ws", "dep:async-stream", "dep:bytes"]
