[package]
name = "basic_site"
version = "0.1.0"
edition = "2021"
publish = false # Prevent this example from being published

[dependencies]
snapfire = { path = "../../rs", features = ["devel"] }

actix-files = "0.6.7"
actix-web = "4"
env_logger = "0.11"
log = "^0.4"
serde = { version = "1", features = ["derive"] }
tera = "1"